# espdrone_bridge

./: README.md
espdrone-traj-tracking/: CMakeLists.txt  package.xml  traj_servo.rviz
espdrone-traj-tracking/include/aerial_catcher/: ContactPlugin.hh  colors.h  common.h  control_utils.h  controller.h  gazebo_ros_link_attacher.h  iLQR_uav_pathplanner.h  iterativeLQR.h  lee_position_controller.h  matrix.h  matrix_old.h  parameters.h  parameters_ros.h
espdrone-traj-tracking/include/aerial_catcher/controller/: basic_controller.h  ilqr_controller.h  mpc_controller.h  mpc_controller_osqp.h  seds_controller.h
espdrone-traj-tracking/include/aerial_catcher/predictor/: predictor.h  uam_param.h
espdrone-traj-tracking/include/seds/: GMR.h
espdrone-traj-tracking/launch/: esp_position.launch  esp_traj.launch  lee_controller.launch  mocap_G305.launch
espdrone-traj-tracking/scripts/: attitude_ctrl_esp_drone.py  esp_mocap_attitude.sh  position_ctrl_esp_drone.py
espdrone-traj-tracking/src/: ac_lee_position_controller_esp.cpp  ac_lee_position_controller_esp.h  ac_lee_position_controller_esp_node.cpp  traj_ctl.cpp
